; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvmem/extr_qfprom.c_qfprom_reg_read.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvmem/extr_qfprom.c_qfprom_reg_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qfprom_priv = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i8*, i64)* @qfprom_reg_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qfprom_reg_read(i8* %0, i32 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.qfprom_priv*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = bitcast i8* %13 to %struct.qfprom_priv*
  store %struct.qfprom_priv* %14, %struct.qfprom_priv** %9, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = bitcast i8* %15 to i32*
  store i32* %16, i32** %10, align 8
  store i32 0, i32* %11, align 4
  %17 = load i64, i64* %8, align 8
  %18 = trunc i64 %17 to i32
  store i32 %18, i32* %12, align 4
  br label %19

19:                                               ; preds = %23, %4
  %20 = load i32, i32* %12, align 4
  %21 = add nsw i32 %20, -1
  store i32 %21, i32* %12, align 4
  %22 = icmp ne i32 %20, 0
  br i1 %22, label %23, label %37

23:                                               ; preds = %19
  %24 = load %struct.qfprom_priv*, %struct.qfprom_priv** %9, align 8
  %25 = getelementptr inbounds %struct.qfprom_priv, %struct.qfprom_priv* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i32, i32* %6, align 4
  %28 = zext i32 %27 to i64
  %29 = add nsw i64 %26, %28
  %30 = load i32, i32* %11, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %11, align 4
  %32 = sext i32 %30 to i64
  %33 = add nsw i64 %29, %32
  %34 = call i32 @readb(i64 %33)
  %35 = load i32*, i32** %10, align 8
  %36 = getelementptr inbounds i32, i32* %35, i32 1
  store i32* %36, i32** %10, align 8
  store i32 %34, i32* %35, align 4
  br label %19

37:                                               ; preds = %19
  ret i32 0
}

declare dso_local i32 @readb(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
